--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.10.1",
     "bcrypt": "^5.0.1",
@@ -36,6 +37,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
     "graphql": "^16.6.0",
     "mongoose": "^6.5.2",
     "passport-jwt": "^4.0.0",
