--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.0.1",
     "graphql": "^16.6.0",
     "mongoose": "^6.5.2",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "redis": "3",
     "reflect-metadata": "^0.1.13",
