--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.32.0",
     "dotenv": "^16.0.1",
     "graphql": "^16.6.0",
     "mongoose": "^6.5.2",
